manifests/production/platform/kubernetes-dashboard/apps_v1_deployment_kubernetes-dashboard-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: auth
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-auth
    app.kubernetes.io/part-of: kubernetes-dashboard
  name: kubernetes-dashboard-auth
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-dashboard
      app.kubernetes.io/name: kubernetes-dashboard-auth
      app.kubernetes.io/part-of: kubernetes-dashboard
  template:
    metadata:
      annotations:
        checksum/config: 1a6adc50a42b25559760d77e95401d3c05b5c908cba5ad2dd1d2e2b53facddb5
      labels:
        app.kubernetes.io/component: auth
        app.kubernetes.io/instance: kubernetes-dashboard
        app.kubernetes.io/name: kubernetes-dashboard-auth
        app.kubernetes.io/part-of: kubernetes-dashboard
    spec:
      automountServiceAccountToken: true
      containers:
      - args: null
        image: docker.io/kubernetesui/dashboard-auth:1.2.3
        imagePullPolicy: IfNotPresent
        name: kubernetes-dashboard-auth
        ports:
        - containerPort: 8000
          name: auth
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 2001
          runAsUser: 1001
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - emptyDir: {}
        name: tmp-volume
