manifests/production/platform/kubernetes-dashboard/v1_service_kubernetes-dashboard-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/part-of: kubernetes-dashboard
  name: kubernetes-dashboard-web
  namespace: kubernetes-dashboard
spec:
  ports:
  - name: web
    port: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard-web
    app.kubernetes.io/part-of: kubernetes-dashboard
  type: ClusterIP
